[project]
name = "kitchenbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alessandro Angioi", email = "alessandro.angioi@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
kitchenbot = "kitchenbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
