[project]
name = "kitchenbot"
version = "0.1.0"
description = "A second brain for the kitchen"
readme = "README.md"
authors = [
    { name = "Alessandro Angioi", email = "alessandro.angioi@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
kitchenbot = "kitchenbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
